adding fixed dimensions to iframes to test

--- a/this-or-that.html
+++ b/this-or-that.html
@@ -45,7 +45,7 @@
 	<!-- <iframe class="link-preview" src="{{entry1}}" sandbox='' allowscripts="no" scrolling="no"></iframe>   -->
 
 
-<div class="contest-row cold-md-12">
+<div class="contest-row">
 
 	
 	<span class="col-md-6">	 <iframe class="link-preview" src="{{entry1}}" sandbox='' scrolling="no" allowscripts="no"></iframe></span>
@@ -59,7 +59,7 @@
 
 </div>
 
-<div class="contest-row col-md-12">
+<div class="contest-row">
 		
 	<div class="col-md-6">  <button type="button" class="btn vote1 button-clear">Vote for #1  ({{vote1_count}})</button> </div>
 	<div class="col-md-6">	<button type="button" class="btn vote2 button-clear">Vote for #2  ({{vote2_count}})</button> </div>
