file uploading commits - broken

--- a/add-contest.html
+++ b/add-contest.html
@@ -22,7 +22,7 @@ Make sure you include the full URL (http://mysite.com)
 		<input type="submit" value="Add Contest">
 		
 		</form>
-	
+	<input type="file" name="FIle Upload" class="myFileInput">
   </div>
   
 </body>
