--- a/add-contest.html
+++ b/add-contest.html
@@ -24,6 +24,8 @@ Make sure you include the full URL (http://mysite.com)
 		</form>
 	
   </div>
+
+{{> dropzone callbacks=callBack }}
   
 </body>
 
