file upload working on submit with 2 images

--- a/add-contest.html
+++ b/add-contest.html
@@ -14,6 +14,7 @@ Make sure you include the full URL (http://mysite.com)
   
   <div class="container">
   
+  <!-- 
 <form class="new-contest">
 		<input type="text" name="site1" placeholder="link to first site" />
 		
@@ -21,8 +22,17 @@ Make sure you include the full URL (http://mysite.com)
 		
 		<input type="submit" value="Add Contest">
 		
-		</form>
-	<input type="file" name="FIle Upload" class="myFileInput">
+		</form>  -->
+
+
+	<form>
+		
+	<input type="file" name="event1" class="myFileInput">
+	<input type="file" name="event2" class="myFileInput">
+
+	<input type="submit" value="Add Contest" >
+</form>
+
   </div>
   
 </body>
