Started adding infrastructure to support contests with more than two images. Added separate collection for images which references the Collection to which the images belong.

--- a/add-contest.html
+++ b/add-contest.html
@@ -25,7 +25,7 @@ Make sure you include the full URL (http://mysite.com)
 		</form>  -->
 
 
-	<form>
+	<form class="new-contest">
 		
 	<input type="file" name="event1" class="myFileInput">
 	<input type="file" name="event2" class="myFileInput">
