--- a/this-or-that.html
+++ b/this-or-that.html
@@ -32,8 +32,7 @@
 
   <div class="container">
 <a href="/addcontest">Add a new contest here</a>
-
-
+<a href="/mycontests">See your contests here</a>
 
   
 	{{#each contests}}
