Changed templating/css for home page display of templates added display of username next to each contest view

--- a/add-contest.html
+++ b/add-contest.html
@@ -26,7 +26,7 @@ Make sure you include the full URL (http://mysite.com)
 
 
 	<form>
-		
+	<input type="text" name="contestName" placeholder="Enter A Name for your Contest">
 	<input type="file" name="event1" class="myFileInput">
 	<input type="file" name="event2" class="myFileInput">
 
