updating to deployed version

--- a/add-contest.html
+++ b/add-contest.html
@@ -30,6 +30,7 @@ Make sure you include the full URL (http://mysite.com)
 	<input type="file" name="event1" class="myFileInput">
 	<input type="file" name="event2" class="myFileInput">
 
+<textarea name="descrip"></textarea>
 	<input type="submit" value="Add Contest" >
 </form>
 
