--- a/add-contest.html
+++ b/add-contest.html
@@ -1,4 +1,12 @@
 <head>
+	<div id='cssmenu'>
+<ul>
+   <li class='active'><a href='/'><span>Home</span></a></li>
+   <li><a href='/mycontests'><span>My Contests</span></a></li>
+   <li><a href='/addcontest'><span>Add A Contest</span></a></li>
+   <li class='last'><a href='#'><span>Contact</span></a></li>
+</ul>
+</div>
   <title>Add a Contest</title>
 </head>
 
@@ -33,6 +41,8 @@ Make sure you include the full URL (http://mysite.com)
 <textarea name="descrip"></textarea>
 	<input type="submit" value="Add Contest" >
 </form>
+
+ {{> flashMessages}}
 
   </div>
   
