--- a/add-contest.html
+++ b/add-contest.html
@@ -1,7 +1,7 @@
 <head>
 	<div id='cssmenu'>
 <ul>
-   <li class='active'><a href='/'><span>Home</span></a></li>
+   <li><a href='/'><span>Home</span></a></li>
    <li><a href='/mycontests'><span>My Contests</span></a></li>
    <li><a href='/addcontest'><span>Add A Contest</span></a></li>
    <li class='last'><a href='#'><span>Contact</span></a></li>
