--- a/this-or-that.html
+++ b/this-or-that.html
@@ -12,7 +12,7 @@
   
 
   <div class="container">
-<a href="/addcontest">Add a new contest here</a>
+<!-- <a href="/addcontest">Add a new contest here</a>  -->
 
 
 
