adding border/styling to contest rows. added padding to submitted by css class

--- a/add-contest.html
+++ b/add-contest.html
@@ -18,7 +18,7 @@
 
 <body> <h1> Add a contest! </h1>
 
-Make sure you include the full URL (http://mysite.com)
+Max Image Size: 10mb; File Types Allowed: png/jpg
 
 
   
