committing new basic colorscheme, borders around contests

--- a/this-or-that.html
+++ b/this-or-that.html
@@ -4,7 +4,9 @@
 </head>
 
 <body>
+	<span class="login-buttons">
    {{> loginButtons}}
+</span>
    {{> flashMessages}}
   
   <h1>Website Comparisons</h1>
