--- a/my-contests.html
+++ b/my-contests.html
@@ -13,6 +13,7 @@
 
 
 <template name="mycontests">
+<div class="sub-container">
  <h1>My Contests</h1>
 
 
@@ -29,7 +30,7 @@
   
   </div>
 	
-	
+</div>	
 </template>
 
 
