--- a/add-contest.html
+++ b/add-contest.html
@@ -46,7 +46,8 @@
 					<textarea class="description-textarea" name="descrip" placeholder="Description"></textarea>
 				</div></div>
 				<div class="item-block"><div class="input-block">
-					<input class="submit-action" type="submit" value="Add Contest" >
+					<!--<input class="submit-action" type="submit" value="Add Contest" >-->
+					<button class="submit-action" type="submit" value="" >Add Contest</button>
 				</div></div>
 			</form> 
 
